k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trx-batch-processor
  labels:
    app: trx-batch-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trx-batch-processor
  template:
    metadata:
      labels:
        app: trx-batch-processor
    spec:
      containers:
      - name: trx-batch-processor
        image: hellozakir/trx-batch-processor:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-logs
          mountPath: /app/logs
      volumes:
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
