k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trx-batch-processor
spec:
  selector:
    app: trx-batch-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
